# wigglytuff

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  mypy.ini  pyproject.toml  shell.nix
docker/: entrypoint.sh
nix/: sources.json
src/: app.py  wsgi.py
src/wigglytuff/: __init__.py  app.py  wsgi.py
src/wigglytuff/tests/: test_app.py
wigglytuff/templates/: home.html
