[tool.poetry]
name = "wigglytuff"
version = "0.1.0"
description = ""
authors = ["Andraz Brodnik <brodul@brodul.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
returns = "^0.19.0"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-deprecated = "^1.3"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-self = "^0.2.2"
flake8-super-call = "^1.0.0"
flake8-tuple = "^0.4.1"
bandit = "^1.7.4"
codespell = "^2.1.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-watch = "^4.2.0"
typecov = "^0.2.1"
lxml = "^4.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"
